--- a/Net-Vimeo/Changes
+++ b/Net-Vimeo/Changes
@@ -1,4 +1,4 @@
-Revision history for Net-Vimeo-Advanced
+Revision history for Net-Vimeo
 
 0.000001    Thu Jun 19 12:10 2014
             First version of Vimeo Advanced API Perl interface
