--- a/Net-Vimeo/Changes
+++ b/Net-Vimeo/Changes
@@ -1,5 +1,9 @@
 Revision history for Net-Vimeo
 
+0.000003    Mon Jun 23 16:30 2014
+            Added missing module from prereq
+            Changed logical definded-OR operator with the logical OR operator
+
 0.000002    Thu Jun 20 18:30 2014
             Added files to MANIFEST
 
