Updated VERSION to 0.000004

--- a/Net-Vimeo/Changes
+++ b/Net-Vimeo/Changes
@@ -1,5 +1,8 @@
 Revision history for Net-Vimeo
 
+0.000004    Sun Feb 08 15:40 2016
+            Improved POD from isync<o.zucker@web.de>
+
 0.000003    Mon Jun 23 16:30 2014
             Added missing module from prereq
             Changed logical definded-OR operator with the logical OR operator
